kubernetes/postgres/adminer/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer-container
          image: adminer:4.7.6-standalone
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 256Mi
              cpu: 500m
